vac-rs/crates/surfaces/tui/src/bottom_pane/snapshots/vac_tui__bottom_pane__app_link_view__tests__app_link_view_install_suggestion_with_reason.snap
---
source: tui/src/bottom_pane/app_link_view.rs
expression: "render_snapshot(&view, Rect::new(0, 0, 72, view.desired_height(72)))"
---

  Google Calendar
  Plan events and schedules.

  Plan and reference events from your calendar

  Install this app in your browser, then return here.
  Newly installed apps can take a few minutes to appear in /apps.
  After installed, use $ to insert this app into the prompt.


  › 1. Install Connector
    2. Back
  Use tab / ↑ ↓ to move, enter to select, esc to close
